<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dp16"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/home_onboard_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meeting_form_details_title"
        android:layout_margin="@dimen/dp16"
        style="@style/TextTitle"
        app:layout_constraintBottom_toTopOf="@+id/meeting_form_details_surname_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/meeting_form_details_surname_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp16"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintVertical_bias="0.666"
        android:text="@string/meeting_form_surname_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        style="@style/SectionTitle"/>

    <TextView
        android:id="@+id/meeting_form_details_surname_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/dp16"
        tools:text="CACCIATO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/meeting_form_details_surname_label"/>

    <TextView
        android:id="@+id/meeting_form_details_lastname_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp16"
        android:text="@string/meeting_form_lastname_label"
        app:layout_constraintStart_toStartOf="@id/meeting_form_details_surname_label"
        app:layout_constraintTop_toBottomOf="@id/meeting_form_details_surname_label"
        style="@style/SectionTitle"/>

    <TextView
        android:id="@+id/meeting_form_details_lastname_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp16"
        tools:text="Lorenzo"
        app:layout_constraintEnd_toEndOf="@id/meeting_form_details_surname_value"
        app:layout_constraintBottom_toBottomOf="@id/meeting_form_details_lastname_label"/>

    <TextView
        android:id="@+id/meeting_form_details_email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp16"
        android:text="@string/meeting_form_email_label"
        app:layout_constraintStart_toStartOf="@id/meeting_form_details_lastname_label"
        app:layout_constraintTop_toBottomOf="@id/meeting_form_details_lastname_label"
        style="@style/SectionTitle"/>

    <TextView
        android:id="@+id/meeting_form_details_email_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp16"
        tools:text="lorenzo.cacciato@gmail.com"
        app:layout_constraintEnd_toEndOf="@id/meeting_form_details_lastname_value"
        app:layout_constraintBottom_toBottomOf="@id/meeting_form_details_email_label"/>

    <TextView
        android:id="@+id/meeting_form_details_consultation_type_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp16"
        android:text="@string/meeting_form_consultation_type_title"
        app:layout_constraintStart_toStartOf="@id/meeting_form_details_email_label"
        app:layout_constraintTop_toBottomOf="@id/meeting_form_details_email_label"
        style="@style/SectionTitle"/>

    <TextView
        android:id="@+id/meeting_form_details_consultation_type_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp16"
        tools:text="Echo thyroidienne"
        app:layout_constraintEnd_toEndOf="@id/meeting_form_details_email_value"
        app:layout_constraintBottom_toBottomOf="@id/meeting_form_details_consultation_type_label"/>

    <Button
        android:id="@+id/meeting_form_details_send_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/meeting_form_details_send_button_title"
        android:layout_marginTop="28dp"
        android:layout_marginLeft="@dimen/dp16"
        android:layout_marginRight="@dimen/dp16"
        style="@style/EnabledButton"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/meeting_form_details_consultation_type_value"/>

</androidx.constraintlayout.widget.ConstraintLayout>