<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/doctor_request_details_onboard_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/doctor_request_details_onboard_title"
        android:layout_margin="@dimen/dp16"
        style="@style/TextTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingBottom="@dimen/dp16"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"/>

    <ImageView
        android:id="@+id/doctor_request_details_onboard_icon"
        android:layout_width="@dimen/dp100"
        android:layout_height="@dimen/dp100"
        android:src="@drawable/ic_hourglass"
        android:padding="@dimen/dp5"
        app:layout_constraintTop_toBottomOf="@id/doctor_request_details_onboard_title"/>

    <TextView
        android:id="@+id/doctor_request_details_onboard_lastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dp5"
        android:textSize="@dimen/dp20"
        android:textStyle="bold"
        android:text="@string/doctor_request_details_onboard_lastname_title"
        app:layout_constraintLeft_toRightOf="@id/doctor_request_details_onboard_icon"
        app:layout_constraintTop_toTopOf="@id/doctor_request_details_onboard_icon"/>

    <TextView
        android:id="@+id/doctor_request_details_onboard_lastname_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dp5"
        android:textSize="@dimen/dp20"
        tools:text="Nom de famille"
        app:layout_constraintLeft_toRightOf="@id/doctor_request_details_onboard_lastname"
        app:layout_constraintTop_toTopOf="@id/doctor_request_details_onboard_icon"
        app:layout_constraintEnd_toEndOf="@id/doctor_request_details_onboard_title"/>

    <TextView
        android:id="@+id/doctor_request_details_onboard_surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dp5"
        android:textSize="@dimen/dp20"
        android:textStyle="bold"
        android:text="@string/doctor_request_details_onboard_surname_title"
        app:layout_constraintTop_toBottomOf="@id/doctor_request_details_onboard_lastname"
        app:layout_constraintStart_toStartOf="@id/doctor_request_details_onboard_lastname"/>

    <TextView
        android:id="@+id/doctor_request_details_onboard_surname_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dp5"
        android:textSize="@dimen/dp20"
        tools:text="Prénom"
        app:layout_constraintLeft_toRightOf="@id/doctor_request_details_onboard_surname"
        app:layout_constraintTop_toTopOf="@id/doctor_request_details_onboard_surname"
        app:layout_constraintEnd_toEndOf="@id/doctor_request_details_onboard_title"/>

    <TextView
        android:id="@+id/doctor_request_details_onboard_consultation_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/dp5"
        android:textSize="@dimen/dp20"
        android:textStyle="bold"
        android:text="@string/doctor_request_details_onboard_consultation_type_title"
        app:layout_constraintTop_toBottomOf="@id/doctor_request_details_onboard_surname"
        app:layout_constraintStart_toStartOf="@id/doctor_request_details_onboard_surname"/>

    <TextView
        android:id="@+id/doctor_request_details_onboard_consultation_type_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dp5"
        android:textSize="@dimen/dp20"
        tools:text="Type de consultation"
        app:layout_constraintTop_toTopOf="@id/doctor_request_details_onboard_consultation_type"
        app:layout_constraintEnd_toEndOf="@id/doctor_request_details_onboard_title"/>


    <!--<TextView
            android:id="@+id/doctor_request_details_onboard_reason_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/dp5"
            android:textSize="@dimen/dp20"
            android:textStyle="bold"
            android:text="@string/doctor_request_details_onboard_reason_type_title"
            app:layout_constraintTop_toBottomOf="@id/doctor_request_details_onboard_consultation_type"
            app:layout_constraintStart_toStartOf="@id/doctor_request_details_onboard_consultation_type"/>

    <TextView
            android:id="@+id/doctor_request_details_onboard_reason_type_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dp5"
            android:textSize="@dimen/dp20"
            tools:text="Raison"
            app:layout_constraintTop_toTopOf="@id/doctor_request_details_onboard_reason_type"
            app:layout_constraintEnd_toEndOf="@id/doctor_request_details_onboard_title"/>
            -->

    <TextView
        android:id="@+id/doctor_request_details_section_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/doctor_request_details_section_date_title"
        android:layout_margin="@dimen/dp16"
        style="@style/SectionTitle"
        app:layout_constraintStart_toStartOf="@id/doctor_request_details_onboard_icon"
        app:layout_constraintTop_toBottomOf="@id/doctor_request_details_onboard_consultation_type_value"/>

    <wheelpicker.aigestudio.widgets.WheelDatePicker
        android:id="@+id/doctor_request_details_section_date_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:verticalScrollbarPosition="left"
        android:layout_margin="@dimen/dp8"
        android:scrollbarThumbVertical="@drawable/scrollbar_style"
        app:layout_constraintTop_toBottomOf="@id/doctor_request_details_section_date"/>

    <TextView
        android:id="@+id/doctor_request_details_section_period"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/doctor_request_details_section_period_title"
        style="@style/SectionTitle"
        app:layout_constraintStart_toStartOf="@id/doctor_request_details_section_date"
        app:layout_constraintTop_toBottomOf="@id/doctor_request_details_section_date_picker"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/doctor_request_details_section_period_calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp12"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@id/doctor_request_details_section_period">

    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/doctor_request_details_confirm_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/doctor_request_details_confirm_button_title"
        android:layout_marginTop="@dimen/dp16"
        android:layout_marginLeft="@dimen/dp16"
        android:layout_marginRight="@dimen/dp16"
        android:layout_marginBottom="@dimen/dp16"
        style="@style/EnabledButton"
        android:backgroundTint="@color/colorPurple"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/doctor_request_details_section_period_calendar"/>

    <Button
        android:id="@+id/doctor_request_details_cancel_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/doctor_request_details_cancel_button_title"
        android:layout_marginLeft="@dimen/dp16"
        android:layout_marginRight="@dimen/dp16"
        android:layout_marginTop="@dimen/dp8"
        android:onClick="onCancel"
        style="@style/EnabledButton"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/doctor_request_details_confirm_button"/>


</androidx.constraintlayout.widget.ConstraintLayout>